--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.6.2",
     "concurrently": "^8.2.2",
     "copy-to-clipboard": "^3.3.3",
+    "express": "^4.19.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
